// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hookScript should match snapshot (OS X/Linux) 1`] = `
"#!/bin/sh
# husky
# v1.1.1 darwin

hookName=\`basename \\"$0\\"\`
gitParams=\\"$*\\"

if ! command -v node >/dev/null 2>&1; then
  echo \\"Can't find node in PATH, trying to find a node binary on your system\\"
fi



npx --no-install _husky-run $hookName \\"$gitParams\\"
exit_status=$?

if [ \\"$exit_status\\" == \\"127\\" ]; then
  echo \\"Can't find Husky, skipping $hookName hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;

exports[`hookScript should match snapshot (Windows) 1`] = `
"#!/bin/sh
# husky
# v1.1.1 win32

hookName=\`basename \\"$0\\"\`
gitParams=\\"$*\\"



npx --no-install _husky-run $hookName \\"$gitParams\\"
exit_status=$?

if [ \\"$exit_status\\" == \\"127\\" ]; then
  echo \\"Can't find Husky, skipping $hookName hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;
